--- a/guides/source/ko/documents.yaml
+++ b/guides/source/ko/documents.yaml
@@ -1,25 +1,269 @@
 -
-  name: Start Here
+  name: 시작하기 전에
   documents:
     -
-      name: Getting Started with Rails
+      name: 레일스 시작하기
       url: getting_started.html
-      description: Everything you need to know to install Rails and create your first application.
+      description: 레일스를 설치하고 레일스 애플리케이션을 처음 만드는데 필요한 모든 지식
 -
-  name: Models
+  name: 모델
   documents:
     -
-      name: Active Record Basics
+      name: 액티브 레코드 기본
       url: active_record_basics.html
-      description: This guide will get you started with models, persistence to database, and the Active Record pattern and library.
+      description: 이 가이드는 모델과 데이터베이스 퍼시스턴스와 액티브 레코드 패턴과 라이브러리를 안내하겠습니다.
     -
-      name: Active Record Migrations
+      name: 액티브 레코드 마이그레이션
       url: active_record_migrations.html
-      description: This guide covers how you can use Active Record migrations to alter your database in a structured and organized manner.
+      description: 이 가이드는 액티브 레코드 마이그레이션을 사용하여 구조와 관계를 갖춘 방법으로 테이터베이스를 변경하는 방법을 소개합니다.
     -
-      name: Active Record Validations
+      name: 액티브 레코드 밸리데이션
       url: active_record_validations.html
-      description: This guide covers how you can use Active Record validations.
+      description: 이 가이드는 액티브 레코드 밸리데이션 사용방법을 소개합니다.
+    -
+      name: 액티브 레코드 콜백
+      url: active_record_callbacks.html
+      description: 이 가이드는 액티브 레코드 콜백 사용방법을 소개합니다.
+    -
+      name: 액티브 레코드 관계
+      url: association_basics.html
+      description: 이 가이드는 엑티브 레코드가 제공하는 모든 관계를 소개합니다.
+    -
+      name: 액티브 레코드 검색 인터페이스
+      url: active_record_querying.html
+      description: 이 가이드는 액티브 레코드가 제공하는 데이터베이스 검색 인터페이스를 소개합니다.
+    -
+      name: 액티브 모델 기본
+      url: active_model_basics.html
+      description: 이 가이드는 액티브 레코드를 사용하지 않고 모델 클래스 사용 방법을 소개합니다.
+      work_in_progress: true
+-
+  name: 뷰
+  documents:
+    -
+      name: 액션 뷰 개요
+      url: action_view_overview.html
+      description: 이 가이드는 액션 뷰와 뷰 헬퍼를 소개합니다.
+      work_in_progress: true
+    -
+      name: 레일스의 레이아웃과 렌더링
+      url: layouts_and_rendering.html
+      description: 이 가이드는 렌더링과 리다이렉팅과 content_for 블록과 파샬 사용방법에 대한 액션 콘트롤러와 액션 뷰의 기본 레이아웃 기능을 소개합니다.
+    -
+      name: 액션 뷰 폼 헬퍼
+      url: form_helpers.html
+      description: 내장 폼 헬퍼 사용 방법 가이드
+-
+  name: 콘트롤러
+  documents:
+    -
+      name: 액션 콘트롤러 개요
+      url: action_controller_overview.html
+      description: 이 가이드는 콘트롤러 동작원리와 애플리케이션의 리퀘스트 처리 과정을 소개합니다. 그 내용은 세션과 필터와 쿠키와 데이터 스트리밍과 리퀘스트에서 발생한 예외처리 등 입니다.
+    -
+      name: 레일스 라우팅
+      url: routing.html
+      description: 이 가이드는 사용자가 접하는 레일스 라우팅 기능을 소개합니다. 레일스 애플리케이션의 라우팅 방법을 이해하려면 여기서부터 시작합니다.
+-
+  name: 심화 내용
+  documents:
+    -
+      name: 액티브 서포트 코어 확장
+      url: active_support_core_extensions.html
+      description: 이 가이드는 액티브 서포트가 정의한 루비 코어 확장에 대한 문서입니다.
+    -
+      name: 레일스 다국어 API
+      url: i18n.html
+      description: 이 가이드는 애플리케이션을 여러 국가 언어로 보여주는 방법을 소개합니다. 다른 언어로 번역할 수 있고, 명사의 복수를 만드는 규칙을 바꾸고, 날짜 표시 형식을 다르게 표시할 수 있습니다.
+    -
+      name: 액션 메일러 기본
+      url: action_mailer_basics.html
+      description: 이 가이드는 액션 메일러를 사용하여 이메일을 주고 받는 방법을 소개합니다.
+    -
+      name: 액티브 잡 기본
+      url: active_job_basics.html
+      description: 이 가이드는 백그라운드 잡을 생성, 추가, 실행하는 방법을 소개합니다.
+    -
+      name: 액티브 스토리지 개요
+      url: active_storage_overview.html
+      description: 이 가이드는 액티브 레코드 모델로 파일 첨부하는 방법을 소개합니다.
+    -
+      name: 레일스 애플리케이션 테스트
+      url: testing.html
+      description: 이 가이드는 레일스의 다양한 테스트 기능에 대한 두루두루 소개합니다. 통합 테스트의 '테스트란 무엇인가?'부터 모든 것을 소개합니다.
+    -
+      name: 레일스 애플리케이션 보안
+      url: security.html
+      description: 이 가이드는 웹 애플리케이션의 일반 보안 문제와 레일스로 보안 문제를 방지하는 방법을 설명합니다.
+    -
+      name: 레일스 애플리케이션 디버깅
+      url: debugging_rails_applications.html
+      description: 이 가이드는 레일스 애플리케이션 디버그 방법을 설명합니다. 코드 "뒤에 숨겨진 곳"에서 무슨 일이 있는지 이해하고 다른 디버그 방법을 소개합니다.
+    -
+      name: 레일스 애플리케이션 설정
+      url: configuring.html
+      description: 이 가이드는 레일스 애플리케이션의 기본 설정을 소개합니다.
+    -
+      name: 레일스 콘솔 명령어
+      url: command_line.html
+      description: 이 가이드는 레일스가 제공하는 커맨드 라인 툴을 소개합니다.
+    -
+      name: 애셋 파이프라인
+      url: asset_pipeline.html
+      description: 이 가이드는 애셋 파이프라인에 대한 문서입니다.
+    -
+      name: 레일스에서 자바스크립트 사용하는 방법
+      url: working_with_javascript_in_rails.html
+      description: 이 가이드는 레일스의 내장 Ajax/자바스크립트 기능을 소개합니다.
+    -
+      name: 레일스 초기화 프로세스
+      work_in_progress: true
+      url: initialization.html
+      description: 이 가이드는 레일스 초기화 프로세스라는 내부 구조를 설명합니다.
+    -
+      name: 상수를 자동으로 가져오고 다시 불러오는 기능
+      url: autoloading_and_reloading_constants.html
+      description: 이 가이드는 어떻게 상수를 자동으로 가져오고 다시 불러오는지에 대한 문서입니다.
+    -
+      name: "레일스로 캐싱하기: 개요"
+      url: caching_with_rails.html
+      description: 이 가이드는 캐싱하여 레일스 애플리케이션을 빠르게 하는 방법을 소개합니다.
+    -
+      name: Active Support Instrumentation
+      work_in_progress: true
+      url: active_support_instrumentation.html
+      description: This guide explains how to use the instrumentation API inside of Active Support to measure events inside of Rails and other Ruby code.
+    -
+      name: API만 사용하는 레일스 애플리케이션
+      url: api_app.html
+      description: 이 가이드는 레일스를 효과적으로 사용하여 JSON API 애플리케이션을 만드는 방법을 설명합니다.
+    -
+      name: 액션 케이블 소개
+      url: action_cable_overview.html
+      description: 이 가이드는 액션 케이블 동작원리와 실시간 기능을 만들기 위해 웹소켓을 사용하는 방법을 설명합니다.
+-
+  name: 레일스 확장하기
+  documents:
+    -
+      name: 레일스 플러그인 입문
+      work_in_progress: true
+      url: plugins.html
+      description: 이 가이드는 레일스 기능을 확장하는 플러그인을 만드는 방법을 소개합니다.
+    -
+      name: 레일스 온 랙
+      url: rails_on_rack.html
+      description: 이 가이드는 레일스와 랙이 어떻게 통합되어 있는지 소개합니다.
+    -
+      name: 레일스 제너레이터 만드는 방법
+      url: generators.html
+      description: 이 가이드는 새로운 제너레이터를 추가 확장하거나, 레일스의 내장 제너레이터의 요소를 바꾸는 방법(예, 스캐폴드 제너레이터의 테스트 스텁 교체)을 소개합니다.
+    -
+      name: 레일스 엔진 시작하기
+      url: engines.html
+      description: 마운트 가능한 레일스 엔진을 만드는 방법을 설명합니다.
+      work_in_progress: true
+    -
+      name: Threading and Code Execution in Rails
+      url: threading_and_code_execution.html
+      description: This guide describes the considerations needed and tools available when working directly with concurrency in a Rails application.
+      work_in_progress: true
+-
+  name: 루비 온 레일스에 기여하는 방법
+  documents:
+    -
+      name: 루비 온 레일스에 기여하는 방법
+      url: contributing_to_ruby_on_rails.html
+      description: 레일스는 '남이 아닌 여러분'의 프레임워크입니다. 현재 진행중인 레일스 개발에 참여하는 다양한 방법을 소개합니다.
+    -
+      name: API 문서 작성 지침
+      url: api_documentation_guidelines.html
+      description: 이 가이드는 루비 온 레일스 API 문서 작성에 대한 지침입니다.
+    -
+      name: 루비 온 레일스 가이드 지침
+      url: ruby_on_rails_guides_guidelines.html
+      description: 이 가이드는 루비 온 레일스 가이드에 대한 문서를 작성하는 지침입니다.
+-
+  name: 유지관리 정책
+  documents:
+    -
+      name: 유지관리 정책
+      url: maintenance_policy.html
+      description: 현재 지원하는 루비 온 레일스 버전과 새 버전 출시 일정입니다.
+-
+  name: 릴리스 노트
+  documents:
+    -
+      name: 루비 온 레일스 업그레이드 가이드
+      url: upgrading_ruby_on_rails.html
+      description: 이 가이드는 애플리케이션을 루비 온 레일스 최신 버전으로 업그레이드하는데 돕습니다.
+    -
+      name: 루비 온 레일스 5.2 릴리스 노트
+      url: 5_2_release_notes.html
+      description: 레일스 5.2에 대한 릴리스 노트입니다.
+    -
+      name: 루비 온 레일스 5.1 릴리스 노트
+      url: 5_1_release_notes.html
+      description: 레일스 5.1에 대한 릴리스 노트입니다.
+    -
+      name: 루비 온 레일스 5.0 릴리스 노트
+      url: 5_0_release_notes.html
+      description: 레일스 5.0에 대한 릴리스 노트입니다.
+    -
+      name: 루비 온 레일스 4.2 릴리스 노트
+      url: 4_2_release_notes.html
+      description: 레일스 4.2에 대한 릴리스 노트입니다.
+    -
+      name: 루비 온 레일스 4.1 릴리스 노트
+      url: 4_1_release_notes.html
+      description: 레일스 4.1에 대한 릴리스 노트입니다.
+    -
+      name: 루비 온 레일스 4.0 릴리스 노트
+      url: 4_0_release_notes.html
+      description: 레일스 5.1에 대한 릴리스 노트입니다.
+    -
+      name: 루비 온 레일스 3.2 릴리스 노트
+      url: 3_2_release_notes.html
+      description: 레일스 3.2에 대한 릴리스 노트입니다.
+    -
+      name: Ruby on Rails 3.1 Release Notes
+      url: 3_1_release_notes.html
+      description: 레일스 3.1에 대한 릴리스 노트입니다.
+    -
+      name: 루비 온 레일스 3.0 릴리스 노트
+      url: 3_0_release_notes.html
+      description: 레일스 3.0에 대한 릴리스 노트입니다.
+    -
+      name: 루비 온 레일스 2.3 릴리스 노트
+      url: 2_3_release_notes.html
+      description: 레일스 2.3에 대한 릴리스 노트입니다.
+    -
+      name: 루비 온 레일스 2.2 릴리스 노트
+      url: 2_2_release_notes.html
+      description: 레일스 2.2에 대한 릴리스 노트입니다.
+
+
+-
+  name: 시작하기 전에
+  documents:
+    -
+      name: 레일스 시작하기
+      url: getting_started.html
+      description: 레일스를 설치하고 레일스 애플리케이션을 처음 만드는데 필요한 모든 지식
+-
+  name: 모델
+  documents:
+    -
+      name: 액티브 레코드 기본
+      url: active_record_basics.html
+      description: 이 가이드는 모델과 데이터베이스 퍼시스턴스와 액티브 레코드 패턴과 라이브러리를 안내하겠습니다.
+    -
+      name: 액티브 레코드 마이그레이션
+      url: active_record_migrations.html
+      description: 이 가이드는 액티브 레코드 마이그레이션을 사용하여 구조와 관계를 갖춘 방법으로 테이터베이스를 변경하는 방법을 소개합니다.
+    -
+      name: 액티브 레코드 밸리데이션
+      url: active_record_validations.html
+      description: 이 가이드는 액티브 레코드 밸리데이션 사용방법을 소개합니다.
     -
       name: Active Record Callbacks
       url: active_record_callbacks.html
